--- a/style.css
+++ b/style.css
@@ -3,33 +3,110 @@
 }
 
 .header{
+    padding-top: 20px;
     float: left;
-    background-color: antiquewhite;
+    background-color: #FFBD4A;
     padding: auto;
+    height: 100%;
+}
+
+.myPicture{
+    background-image: url("repository/profilepic.jfif");
+    background-size: contain;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: auto;
+    border: solid;
+    border-color: white;
+}
+
+
+.name{
+    margin-top: 10px!important;
+    text-align: center;
+    margin: auto;
+    white-space: nowrap;
+    color: black;
+}
+
+.name h1{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 26px;
+    font-weight: 600;
 }
 
 .headerList{
     display: flex;
+    text-align: left;
+    margin: auto;
+    padding-top: 20px;
+    padding-right: 30px;
+    color: black;
 }
 
-.headerList li{
-    justify-content: center;
+.headerList a{
     font-size: 22px;
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
 }
 
-.name{
-    width: 50%;
-    padding-left: 50px;
+.headerList a:hover{
+    color: #0009;
 }
 
 .pageContent{
-    float: right;
     width: 80%;
-    background-color: aqua;
+    float: right;
 }
 
 .hero{
+    background-image: url("repository/hero-image.png");
+    background-size: cover;
+    width: 100%;
+    height: 300px;
     margin: auto;
-    color: white;
     text-align: center;
+    padding-top: 100px;
+}
+
+.socialMedia ul{
+    padding-left: 20px;
+    padding-right: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.socialMedia a{
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.socialMedia a:hover{
+    color: #0009;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+h2{
+    padding: 25px 25px 0px 25px ;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 700;
+}
+
+p{
+    font-family: 'Courier New', Courier, monospace;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+li{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    list-style-type: none;
 }
