--- a/style.css
+++ b/style.css
@@ -122,3 +122,45 @@ li{
     font-weight: 600;
     list-style-type: none;
 }
+
+.filterProjects{
+    padding-top: 10px;
+    padding-left: 10px;
+    display: flex;
+}
+
+#projectsDropdown{
+    margin-left: 15px;
+}
+
+.projectBox{
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    height: 100%;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 10px;
+    display: block;
+}
+
+.projectsList{
+    display: flex;
+}
+.project{
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 5px 10px 5px 10px;
+}
+
+.show{
+    display: inline;
+}
+
+.hide{
+    display: none;
+}
